plugins {
    id 'org.springframework.boot' version "2.6.2"
    id 'java'
}

group 'sky'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

configurations {
    all {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-web'
    }
}

dependencies {
    implementation 'org.apache.spark:spark-core_2.13:3.3.0'
    implementation 'org.apache.spark:spark-sql_2.13:3.3.0'
    implementation 'org.springframework.boot:spring-boot-starter:2.7.3'
    implementation "org.springframework.boot:spring-boot-configuration-processor:2.7.3"
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor:2.7.3"
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
    implementation 'com.squareup:javapoet:1.13.0'
    implementation "javax.annotation:jsr250-api:1.0"
    implementation 'org.mockito:mockito-junit-jupiter:4.7.0'
    implementation 'io.projectreactor.kafka:reactor-kafka:1.3.12'
    implementation 'io.projectreactor.kafka:reactor-kafka-tools:1.3.12'
    implementation 'org.springframework.kafka:spring-kafka:2.9.0'
    annotationProcessor 'org.springframework.boot:spring-boot-autoconfigure:2.7.3'
    implementation 'org.springframework.boot:spring-boot-starter-parent:2.7.3'
    implementation 'org.springframework.boot:spring-boot-starter-webflux:2.7.3'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.3'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
    implementation 'org.projectlombok:lombok:1.18.24'
    implementation 'io.projectreactor:reactor-core:3.4.22'
    implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.3'
    implementation 'com.google.code.gson:gson:2.9.0'
    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    implementation "io.github.resilience4j:resilience4j-reactor:1.7.1"
    testImplementation 'org.junit.platform:junit-platform-commons:1.9.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.3'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
    implementation "ch.qos.logback:logback-core:1.2.6"
    implementation "org.slf4j:slf4j-api:1.7.30"
}

test {
    useJUnitPlatform()

}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}
tasks.withType(Test).all {
    jvmArgs += '--enable-preview'
    jvmArgs += '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
}
tasks.withType(JavaCompile).all {
    options.compilerArgs += ['--enable-preview']
    options.compilerArgs += ['--add-opens=java.base/sun.nio.ch=ALL-UNNAMED']
}
sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

compileJava {
    options.compilerArgs += ["--enable-preview"]
}